App/Backend/Ingress/ingress.yaml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-packersmovers-service
  labels:
    app: packersmovers
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-087297e5ee1b22004, subnet-0e4b07d98fcc33c15, subnet-0e0e6b1fd83e985ae  
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:339713180346:certificate/04ee26e4-b844-498c-8a95-f0c04600b008

    
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: customer-service
            port:
              number: 8080
        path: /customer*
        pathType: ImplementationSpecific
        
     # - backend:
      #    service:
       #     name: driver-service
        #    port:
         #     number: 8080
        #path: /driver*
        #pathType: ImplementationSpecific
